# career-questions-rag

./: README.md  pyproject.toml  scrape.py  search.py  stream_encode.py  summarize.py  umap.py
data/: blogs.csv
