[project]
name = "seo-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Brent Fisher",email = "brent.fisher@careerbuilder.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
